--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <p class="author__body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis corrupti eveniet perspiciatis ipsum eos quos, ea dignissimos in sapiente tempora corporis obcaecati laudantium. Architecto illum dicta facilis non quos optio.</p>
 </div>
 
-<!-- <img src="/img/hero-image.webp" alt="person looking out through window" class="hero-image" width="981" height="528"> -->
+<img src="/img/hero-image.webp" alt="person looking out through window" class="hero-image" width="981" height="528">
 
 <section class="articles">
   <h2 class="articles__heading">Latest Posts</h2>
